# SCOPE

./: .gitignore  README.md  pyproject.toml
data/: preprocess.py
data/AIME25-TTT/: test.json
examples/SCOPE/LLaMA3.1-Instruct/: aime24.sh  aime25.sh  amc.sh  math.sh
examples/SCOPE/Qwen2.5-Math/: aime24.sh  aime25.sh  amc.sh  math.sh
examples/SCOPE/Qwen3-1.7B/: aime24.sh  aime25.sh  amc.sh  math.sh
examples/SCOPE/Qwen3-8B/: aime24.sh  aime25.sh  amc.sh  math.sh
verl/: protocol.py
verl/trainer/config/: ppo_trainer.yaml  ppo_trainer_ttrl.yaml
verl/trainer/ppo/: grouputils.py  myutils.py  ray_trainer.py  ttrl_utils.py
verl/utils/reward_score/ttrl_math/: __init__.py
verl/workers/reward_manager/: naive.py
verl/workers/rollout/vllm_rollout/: vllm_rollout_spmd.py
